--- a/überuns.html
+++ b/überuns.html
@@ -30,9 +30,9 @@
         <div class="logo"> Bier Shop</div>
         <div class="nav i">
           <a href="index.html">Homepage</a>
-          <a href="Warenbestand.html">Warenbestand</a>
-          <a href="Über uns.html">Über uns</a>
-          <a href="Kontakt.html">Kontakt</a>
+          <a href="warenbestand.html">Warenbestand</a>
+          <a href="überuns.html">Über uns</a>
+          <a href="kontakt.html">Kontakt</a>
     
         </div>
     </nav> 
