--- a/überuns.html
+++ b/überuns.html
@@ -48,7 +48,7 @@
            </div>
         </div>
     </section>  
-    <img class="header-image" src="/img/bild.2.jpg">
+    <img class="header-image" src="bild.2.jpg">
 
 </body>
 </html>
