--- a/überuns.html
+++ b/überuns.html
@@ -17,8 +17,9 @@
       top: 250px;
       font-size: 25px;
       color: rgb(185, 4, 4);
-
+      text-shadow: 4px 5px 5px white;
   }
+
 
 
     </style>
